<?xml version="1.0"?>
<package format="3">
  <name>unitree_joint_controller</name>
  <version>5.2.0</version>
  <description>Controller Unitree blah blah</description>

  <maintainer email="asselmeier.max@gmail.com">Maxwell Asselmeier</maintainer>

  <license>Apache License 2.0</license>

  <url type="website">https://control.ros.org</url>
  <url type="bugtracker">https://github.com/ros-controls/ros2_controllers/issues</url>
  <url type="repository">https://github.com/ros-controls/ros2_controllers/</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>angles</depend>
  <depend>backward_ros</depend> -->
  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>control_toolbox</depend>
  <depend>generate_parameter_library</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>realtime_tools</depend>
  <!-- <depend>rsl</depend>
  <depend>tl_expected</depend>
  <depend>trajectory_msgs</depend> -->
  <depend>urdf</depend>
  <depend>unitree_go</depend>

  <test_depend>ament_cmake_gmock</test_depend>
  <test_depend>controller_manager</test_depend>
  <test_depend>hardware_interface_testing</test_depend>
  <test_depend>ros2_control_test_assets</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
