<?xml version="1.0"?>
<package format="2">
  <name>ocs2_go2_mpc</name>
  <version>0.0.0</version>
  <description>The ocs2_go2_mpc package</description>

  <maintainer email="farbod@todo.todo">farbod</maintainer>

  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>ocs2_go2_models</depend>
  <depend>ocs2_custom_quadruped_interface</depend>

  <exec_depend>ocs2_go2_commands</exec_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>

  <export>                               
   <build_type>ament_cmake</build_type>
  </export>
</package>
